fixed cart overflow issue

--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -2,10 +2,6 @@
 @use "./types";
 @use "./components";
 
-body {
-  overflow-x: hidden;
-}
-
 .test {
   min-height: 100vh;
 
